ncc/testsuite/negative/fail-cyclic-tyalias.n
type t = t -> t;  // E: The type 't' has recursive definition.